--- a/templates/cart.html
+++ b/templates/cart.html
@@ -46,7 +46,7 @@
 </div>
 
 <div class="col-md-5">
-
+    {% if flag=="True" %}
     <h2>Delivery Options</h2>
 {% raw %}
     <form name="deliveryOptions" ng-controller="FormController as formCtrl" ng-submit="deliveryOptions.$valid && validateDelivery()" novalidate>
@@ -91,7 +91,7 @@
         </form>
 {% endraw %}
 {% else %}
-        {% raw %}
+    {% raw %}
 	    <form name="deliveryOptions" ng-controller="FormController as formCtrl" ng-submit="deliveryOptions.$valid && validateDelivery()" novalidate>
         <label>Delivery is a flat $5 fee</label><br>
         <div>
